@@ -4,6 +4,9 @@ Changelog
 0.7.1 (unreleased)
 ~~~~~~~~~~~~~~~~~~
 
+- Support filtering on embedded document fields / across relations (#186)
+  [Dominik Kellner]
+- Fix sorting across relations [Dominik Kellner]
 - Add Python 3.7 and PyPy3 to supported (and tested) versions [Dominik Kellner]
 - Pin SQLAlchemy version due to warnings in Flask-SQLAlchemy [Dominik Kellner]
 - Improve documentation (#187, #189) [Marc Vila]
